--- a/src/styles/desktop/windowFrame.module.css
+++ b/src/styles/desktop/windowFrame.module.css
@@ -36,7 +36,7 @@
     bottom: 0;
     z-index: -1;
     box-shadow: inset 1px 0 0 0 rgba(var(--color-foreground-rgb), 0.1),
-        inset 0 -1px 1px 0 rgba(0, 0, 0, 0.1);
+        inset 0 -1px 0 0  rgba(var(--color-foreground-rgb), 0.1);
     transition: left var(--pane-dur-fast) ease-in-out;
 
 }
