--- a/src/styles/archive/archiveClient.module.css
+++ b/src/styles/archive/archiveClient.module.css
@@ -70,7 +70,7 @@
    display: flex;
    justify-content: flex-start;
    align-items: stretch;
-   padding: 15px 15px;
+   padding: 0;
 
    overflow: hidden; /* content scrolls *inside* the card */
    background: var(--color-background);
