--- a/src/styles/archive/projectView.module.css
+++ b/src/styles/archive/projectView.module.css
@@ -13,7 +13,7 @@
   width: 100%;
   max-width: none; 
 
-  margin: 1rem 1rem 1rem;
+  margin: 1rem;
   max-height: calc(100% - 2rem);
   padding: 20px 30px;
 
